// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aggregator should render an Aggregator items with a custom render function 1`] = `
<div
  id="custom"
>
  <div
    id="render"
  >
    <div
      id="wrappers"
    >
      <AggregatorItem
        aggregatorDelegate={
          Object {
            "hasFocus": false,
            "itemState": undefined,
            "releaseFocus": undefined,
            "requestFocus": [Function],
          }
        }
      />
      <AggregatorItem
        aggregatorDelegate={
          Object {
            "hasFocus": false,
            "itemState": undefined,
            "releaseFocus": undefined,
            "requestFocus": [Function],
          }
        }
      />
      <AggregatorItem
        aggregatorDelegate={
          Object {
            "hasFocus": false,
            "itemState": undefined,
            "releaseFocus": undefined,
            "requestFocus": [Function],
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Aggregator should render an Aggregator with items 1`] = `
<div>
  <AggregatorItem
    aggregatorDelegate={
      Object {
        "hasFocus": false,
        "itemState": undefined,
        "releaseFocus": undefined,
        "requestFocus": [Function],
      }
    }
  />
  <AggregatorItem
    aggregatorDelegate={
      Object {
        "hasFocus": false,
        "itemState": undefined,
        "releaseFocus": undefined,
        "requestFocus": [Function],
      }
    }
  />
  <AggregatorItem
    aggregatorDelegate={
      Object {
        "hasFocus": false,
        "itemState": undefined,
        "releaseFocus": undefined,
        "requestFocus": [Function],
      }
    }
  />
</div>
`;

exports[`Aggregator should render an Aggregator without optional props 1`] = `<div />`;
